--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 71,
    "metadata": {
     "scrolled": true
    },
@@ -1412,7 +1412,7 @@
        "[30000 rows x 112 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1437,7 +1437,7 @@
     "scaled_features_df = pd.concat([scaled_features_df, lineups['Won']], axis=1)\n",
     "\n",
     "# save as new csv to for modeling purpose\n",
-    "# scaled_csv = scaled_features_df.to_csv('dota2_scaled.csv')\n",
+    "scaled_csv = scaled_features_df.to_csv('dota2_scaled.csv')\n",
     "scaled_features_df"
    ]
   },
