--- a/dota_classification_models.ipynb
+++ b/dota_classification_models.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,17 +41,225 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Riki</th>\n",
+       "      <th>Razor</th>\n",
+       "      <th>Morphling</th>\n",
+       "      <th>Brewmaster</th>\n",
+       "      <th>Slardar</th>\n",
+       "      <th>Wisp</th>\n",
+       "      <th>Omniknight</th>\n",
+       "      <th>Slark</th>\n",
+       "      <th>Ogre Magi</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Tier_3</th>\n",
+       "      <th>Carry</th>\n",
+       "      <th>Support</th>\n",
+       "      <th>Offlane</th>\n",
+       "      <th>Mid</th>\n",
+       "      <th>Roamer</th>\n",
+       "      <th>Nuke/Disable</th>\n",
+       "      <th>Most_Picked_719</th>\n",
+       "      <th>Most_Picked_720</th>\n",
+       "      <th>Won</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.253443</td>\n",
+       "      <td>-0.155243</td>\n",
+       "      <td>-0.186940</td>\n",
+       "      <td>-0.181034</td>\n",
+       "      <td>-0.187513</td>\n",
+       "      <td>-0.21094</td>\n",
+       "      <td>-0.183669</td>\n",
+       "      <td>-0.245093</td>\n",
+       "      <td>-0.197112</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.113087</td>\n",
+       "      <td>-1.615486</td>\n",
+       "      <td>-0.493732</td>\n",
+       "      <td>1.007526</td>\n",
+       "      <td>1.261730</td>\n",
+       "      <td>0.157217</td>\n",
+       "      <td>3.185349</td>\n",
+       "      <td>-0.678438</td>\n",
+       "      <td>-0.650247</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.253443</td>\n",
+       "      <td>-0.155243</td>\n",
+       "      <td>-0.186940</td>\n",
+       "      <td>-0.181034</td>\n",
+       "      <td>-0.187513</td>\n",
+       "      <td>-0.21094</td>\n",
+       "      <td>-0.183669</td>\n",
+       "      <td>-0.245093</td>\n",
+       "      <td>-0.197112</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.995611</td>\n",
+       "      <td>-1.615486</td>\n",
+       "      <td>-0.493732</td>\n",
+       "      <td>1.007526</td>\n",
+       "      <td>0.266544</td>\n",
+       "      <td>0.157217</td>\n",
+       "      <td>-0.254635</td>\n",
+       "      <td>-0.678438</td>\n",
+       "      <td>1.141562</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-0.190351</td>\n",
+       "      <td>6.441500</td>\n",
+       "      <td>-0.186940</td>\n",
+       "      <td>-0.181034</td>\n",
+       "      <td>-0.187513</td>\n",
+       "      <td>-0.21094</td>\n",
+       "      <td>-0.183669</td>\n",
+       "      <td>-0.245093</td>\n",
+       "      <td>-0.197112</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.995611</td>\n",
+       "      <td>0.711521</td>\n",
+       "      <td>-1.621490</td>\n",
+       "      <td>-1.304373</td>\n",
+       "      <td>0.266544</td>\n",
+       "      <td>-1.058379</td>\n",
+       "      <td>0.892026</td>\n",
+       "      <td>-0.678438</td>\n",
+       "      <td>-0.650247</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-0.190351</td>\n",
+       "      <td>6.441500</td>\n",
+       "      <td>5.349299</td>\n",
+       "      <td>-0.181034</td>\n",
+       "      <td>-0.187513</td>\n",
+       "      <td>-0.21094</td>\n",
+       "      <td>5.444586</td>\n",
+       "      <td>-0.245093</td>\n",
+       "      <td>-0.197112</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.995611</td>\n",
+       "      <td>-0.451982</td>\n",
+       "      <td>0.634025</td>\n",
+       "      <td>-1.304373</td>\n",
+       "      <td>-0.728642</td>\n",
+       "      <td>0.157217</td>\n",
+       "      <td>0.892026</td>\n",
+       "      <td>-0.678438</td>\n",
+       "      <td>-0.650247</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5.253443</td>\n",
+       "      <td>-0.155243</td>\n",
+       "      <td>-0.186940</td>\n",
+       "      <td>5.523822</td>\n",
+       "      <td>-0.187513</td>\n",
+       "      <td>-0.21094</td>\n",
+       "      <td>-0.183669</td>\n",
+       "      <td>-0.245093</td>\n",
+       "      <td>5.073260</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.113087</td>\n",
+       "      <td>-0.451982</td>\n",
+       "      <td>-0.493732</td>\n",
+       "      <td>-0.148424</td>\n",
+       "      <td>-0.728642</td>\n",
+       "      <td>0.157217</td>\n",
+       "      <td>0.892026</td>\n",
+       "      <td>-0.678438</td>\n",
+       "      <td>1.141562</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 113 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0      Riki     Razor  Morphling  Brewmaster   Slardar     Wisp  \\\n",
+       "0           0  5.253443 -0.155243  -0.186940   -0.181034 -0.187513 -0.21094   \n",
+       "1           1  5.253443 -0.155243  -0.186940   -0.181034 -0.187513 -0.21094   \n",
+       "2           2 -0.190351  6.441500  -0.186940   -0.181034 -0.187513 -0.21094   \n",
+       "3           3 -0.190351  6.441500   5.349299   -0.181034 -0.187513 -0.21094   \n",
+       "4           4  5.253443 -0.155243  -0.186940    5.523822 -0.187513 -0.21094   \n",
+       "\n",
+       "   Omniknight     Slark  Ogre Magi  ...    Tier_3     Carry   Support  \\\n",
+       "0   -0.183669 -0.245093  -0.197112  ... -0.113087 -1.615486 -0.493732   \n",
+       "1   -0.183669 -0.245093  -0.197112  ...  0.995611 -1.615486 -0.493732   \n",
+       "2   -0.183669 -0.245093  -0.197112  ...  0.995611  0.711521 -1.621490   \n",
+       "3    5.444586 -0.245093  -0.197112  ...  0.995611 -0.451982  0.634025   \n",
+       "4   -0.183669 -0.245093   5.073260  ... -0.113087 -0.451982 -0.493732   \n",
+       "\n",
+       "    Offlane       Mid    Roamer  Nuke/Disable  Most_Picked_719  \\\n",
+       "0  1.007526  1.261730  0.157217      3.185349        -0.678438   \n",
+       "1  1.007526  0.266544  0.157217     -0.254635        -0.678438   \n",
+       "2 -1.304373  0.266544 -1.058379      0.892026        -0.678438   \n",
+       "3 -1.304373 -0.728642  0.157217      0.892026        -0.678438   \n",
+       "4 -0.148424 -0.728642  0.157217      0.892026        -0.678438   \n",
+       "\n",
+       "   Most_Picked_720  Won  \n",
+       "0        -0.650247    1  \n",
+       "1         1.141562    1  \n",
+       "2        -0.650247    1  \n",
+       "3        -0.650247    1  \n",
+       "4         1.141562    1  \n",
+       "\n",
+       "[5 rows x 113 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# open the pre-processed csv file and split the target variable from the classifiers\n",
-    "df = pd.read_csv('dota2_scaled.csv')"
+    "df = pd.read_csv('dota2_scaled.csv')\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,9 +335,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(49.28, 49.69)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.dummy import DummyClassifier\n",
     "dummy = DummyClassifier(strategy='stratified', random_state=123)\n",
@@ -148,9 +367,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall Score: 100.0\n",
+      "Accuracy Score: 99.97\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
