--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,18 +217,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Sentinal_1         Sentinal_2        Sentinal_3     Sentinal_4  \\\n",
+      "0       Sven         Lone Druid        Venomancer      Clockwerk   \n",
+      "1       Riki             Tinker              Puck        Leshrac   \n",
+      "2    Invoker             Mirana             Pudge         Magnus   \n",
+      "3       Riki  Centaur Warrunner  Treant Protector  Queen of Pain   \n",
+      "4      Razor             Kunkka       Drow Ranger        Leshrac   \n",
+      "\n",
+      "            Sentinal_5 Scourge_1   Scourge_2      Scourge_3      Scourge_4  \\\n",
+      "0        Shadow Shaman   Invoker  Gyrocopter      Anti-Mage      Alchemist   \n",
+      "1         Nyx Assassin   Slardar   Sand King        Spectre      Necrolyte   \n",
+      "2  Keeper of the Light    Rubick  Tidehunter  Queen of Pain  Faceless Void   \n",
+      "3          Broodmother    Rubick      Weaver  Troll Warlord      Alchemist   \n",
+      "4                 Zeus      Riki        Bane         Visage        Invoker   \n",
+      "\n",
+      "     Scourge_5  Won  \n",
+      "0        Slark    2  \n",
+      "1      Warlock    1  \n",
+      "2       Sniper    2  \n",
+      "3  Drow Ranger    1  \n",
+      "4    Timbersaw    1  \n",
+      "          Sentinal_1        Sentinal_2        Sentinal_3     Sentinal_4  \\\n",
+      "14995  Queen of Pain        Lone Druid         Necrolyte           Lich   \n",
+      "14996           Wisp  Nature's Prophet            Weaver     Gyrocopter   \n",
+      "14997  Shadow Shaman           Invoker            Clinkz  Troll Warlord   \n",
+      "14998         Kunkka             Pudge           Invoker   Nyx Assassin   \n",
+      "14999     Tidehunter             Viper  Treant Protector            Axe   \n",
+      "\n",
+      "         Sentinal_5          Scourge_1          Scourge_2    Scourge_3  \\\n",
+      "14995     Clockwerk             Visage       Witch Doctor       Jakiro   \n",
+      "14996  Nyx Assassin  Outworld Devourer               Luna         Lion   \n",
+      "14997   Lifestealer             Magnus       Shadow Demon          Axe   \n",
+      "14998    Naga Siren      Bounty Hunter  Outworld Devourer   Juggernaut   \n",
+      "14999        Dazzle             Magnus               Ursa  Bloodseeker   \n",
+      "\n",
+      "         Scourge_4          Scourge_5  Won  \n",
+      "14995  Bloodseeker        Lycanthrope    1  \n",
+      "14996    Clockwerk         Tidehunter    1  \n",
+      "14997       Sniper         Windrunner    2  \n",
+      "14998  Drow Ranger               Chen    1  \n",
+      "14999   Omniknight  Outworld Devourer    2  \n",
+      "       Hero_1             Hero_2            Hero_3          Hero_4  \\\n",
+      "0        Riki             Tinker              Puck         Leshrac   \n",
+      "1        Riki  Centaur Warrunner  Treant Protector   Queen of Pain   \n",
+      "2       Razor             Kunkka       Drow Ranger         Leshrac   \n",
+      "3   Morphling         Omniknight             Pudge  Crystal Maiden   \n",
+      "4  Brewmaster            Leshrac         Ogre Magi          Kunkka   \n",
+      "\n",
+      "         Hero_5  Won  \n",
+      "0  Nyx Assassin    1  \n",
+      "1   Broodmother    1  \n",
+      "2          Zeus    1  \n",
+      "3         Razor    1  \n",
+      "4          Riki    1  \n",
+      "                  Hero_1             Hero_2       Hero_3       Hero_4  \\\n",
+      "29995             Kunkka          Morphling   Tidehunter   Windrunner   \n",
+      "29996             Mirana        Lifestealer  Earthshaker      Invoker   \n",
+      "29997             Visage       Witch Doctor       Jakiro  Bloodseeker   \n",
+      "29998  Outworld Devourer               Luna         Lion    Clockwerk   \n",
+      "29999      Bounty Hunter  Outworld Devourer   Juggernaut  Drow Ranger   \n",
+      "\n",
+      "              Hero_5  Won  \n",
+      "29995          Pudge    0  \n",
+      "29996  Bounty Hunter    0  \n",
+      "29997    Lycanthrope    0  \n",
+      "29998     Tidehunter    0  \n",
+      "29999           Chen    0  \n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "D:\\Programs\\Anaconda\\lib\\site-packages\\pandas\\core\\frame.py:4223: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  return super().rename(**kwargs)\n",
       "D:\\Programs\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
@@ -280,8 +347,11 @@
     "# merge the dataframes to create a df that contains all the lineups and if they won or not\n",
     "lineups = pd.concat([sentinal_winners, scourge_winners, sentinal_losers, scourge_losers])\n",
     "lineups.reset_index(drop=True, inplace=True)\n",
-    "lineups.head()\n",
-    "lines_csv = lineups.to_csv('lineups.csv', index = None, header=True)"
+    "# lines_csv = lineups.to_csv('lineups.csv', index = None, header=True)\n",
+    "print(df.head())\n",
+    "print(df.tail())\n",
+    "print(lineups.head())\n",
+    "print(lineups.tail())"
    ]
   },
   {
@@ -292,7 +362,7 @@
    "source": [
     "# split the hero list from the outcome of the game\n",
     "features_df = lineups.drop('Won', axis=1)\n",
-    "\n",
+    "labels = lineups.Won\n",
     "# use the populate function to create dummies columns for all the characters in the game\n",
     "dummies_df = hlf.populate_df(features_df)\n",
     "no_features_df = pd.concat([dummies_df, lineups.Won], axis=1)\n",
@@ -335,7 +405,7 @@
     }
    ],
    "source": [
-    "# check for class imbalance\n",
+    "# checking out of curiousty if sentinal scourge won more\n",
     "outcome_df = pd.get_dummies(lineups.Won)\n",
     "outcome_df = outcome_df.rename(columns={0:'Sentinal', 1: 'Scourge'})\n",
     "sum_wins_by_team = pd.concat([dummies_df, outcome_df], axis=1)\n",
