adding testing data

--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,8 +365,8 @@
     "labels = lineups.Won\n",
     "# use the populate function to create dummies columns for all the characters in the game\n",
     "dummies_df = hlf.populate_df(features_df)\n",
-    "no_features_df = pd.concat([dummies_df, lineups.Won], axis=1)\n",
-    "# dummies_csv = no_features_df.to_csv ('dota2_dummies.csv')"
+    "no_features_df = pd.concat([dummies_df, labels], axis=1)\n",
+    "dummies_csv = no_features_df.to_csv ('dota2_dummies.csv', index=False, header=True)"
    ]
   },
   {
