--- a/dota_classification_models.ipynb
+++ b/dota_classification_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -51,6 +51,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>Riki</th>\n",
        "      <th>Razor</th>\n",
        "      <th>Morphling</th>\n",
@@ -60,186 +61,178 @@
        "      <th>Omniknight</th>\n",
        "      <th>Slark</th>\n",
        "      <th>Ogre Magi</th>\n",
-       "      <th>Chaos Knight</th>\n",
        "      <th>...</th>\n",
-       "      <th>Support</th>\n",
-       "      <th>Offlane</th>\n",
-       "      <th>Mid</th>\n",
-       "      <th>Roamer</th>\n",
-       "      <th>Nuke/Disable</th>\n",
-       "      <th>High_Win</th>\n",
-       "      <th>Low_Win</th>\n",
-       "      <th>Most_Picked_719</th>\n",
-       "      <th>Most_Picked_720</th>\n",
+       "      <th>Naga Siren</th>\n",
+       "      <th>Treant Protector</th>\n",
+       "      <th>Vengeful Spirit</th>\n",
+       "      <th>Night Stalker</th>\n",
+       "      <th>Pugna</th>\n",
+       "      <th>Leshrac</th>\n",
+       "      <th>Dazzle</th>\n",
+       "      <th>Spectre</th>\n",
+       "      <th>Meepo</th>\n",
        "      <th>Won</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>5.253443</td>\n",
-       "      <td>-0.155243</td>\n",
-       "      <td>-0.186940</td>\n",
-       "      <td>-0.181034</td>\n",
-       "      <td>-0.187513</td>\n",
-       "      <td>-0.21094</td>\n",
-       "      <td>-0.183669</td>\n",
-       "      <td>-0.245093</td>\n",
-       "      <td>-0.197112</td>\n",
-       "      <td>-0.211026</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>-0.493732</td>\n",
-       "      <td>1.007526</td>\n",
-       "      <td>1.261730</td>\n",
-       "      <td>0.157217</td>\n",
-       "      <td>3.185349</td>\n",
-       "      <td>0.474901</td>\n",
-       "      <td>-0.814275</td>\n",
-       "      <td>-0.678438</td>\n",
-       "      <td>-0.650247</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>5.253443</td>\n",
-       "      <td>-0.155243</td>\n",
-       "      <td>-0.186940</td>\n",
-       "      <td>-0.181034</td>\n",
-       "      <td>-0.187513</td>\n",
-       "      <td>-0.21094</td>\n",
-       "      <td>-0.183669</td>\n",
-       "      <td>-0.245093</td>\n",
-       "      <td>-0.197112</td>\n",
-       "      <td>-0.211026</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>-0.493732</td>\n",
-       "      <td>1.007526</td>\n",
-       "      <td>0.266544</td>\n",
-       "      <td>0.157217</td>\n",
-       "      <td>-0.254635</td>\n",
-       "      <td>0.474901</td>\n",
-       "      <td>0.667752</td>\n",
-       "      <td>-0.678438</td>\n",
-       "      <td>1.141562</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>-0.190351</td>\n",
-       "      <td>6.441500</td>\n",
-       "      <td>-0.186940</td>\n",
-       "      <td>-0.181034</td>\n",
-       "      <td>-0.187513</td>\n",
-       "      <td>-0.21094</td>\n",
-       "      <td>-0.183669</td>\n",
-       "      <td>-0.245093</td>\n",
-       "      <td>-0.197112</td>\n",
-       "      <td>-0.211026</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>-1.621490</td>\n",
-       "      <td>-1.304373</td>\n",
-       "      <td>0.266544</td>\n",
-       "      <td>-1.058379</td>\n",
-       "      <td>0.892026</td>\n",
-       "      <td>1.805530</td>\n",
-       "      <td>-0.814275</td>\n",
-       "      <td>-0.678438</td>\n",
-       "      <td>-0.650247</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>-0.190351</td>\n",
-       "      <td>6.441500</td>\n",
-       "      <td>5.349299</td>\n",
-       "      <td>-0.181034</td>\n",
-       "      <td>-0.187513</td>\n",
-       "      <td>-0.21094</td>\n",
-       "      <td>5.444586</td>\n",
-       "      <td>-0.245093</td>\n",
-       "      <td>-0.197112</td>\n",
-       "      <td>-0.211026</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.634025</td>\n",
-       "      <td>-1.304373</td>\n",
-       "      <td>-0.728642</td>\n",
-       "      <td>0.157217</td>\n",
-       "      <td>0.892026</td>\n",
-       "      <td>-0.855727</td>\n",
-       "      <td>0.667752</td>\n",
-       "      <td>-0.678438</td>\n",
-       "      <td>-0.650247</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>5.253443</td>\n",
-       "      <td>-0.155243</td>\n",
-       "      <td>-0.186940</td>\n",
-       "      <td>5.523822</td>\n",
-       "      <td>-0.187513</td>\n",
-       "      <td>-0.21094</td>\n",
-       "      <td>-0.183669</td>\n",
-       "      <td>-0.245093</td>\n",
-       "      <td>5.073260</td>\n",
-       "      <td>-0.211026</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>-0.493732</td>\n",
-       "      <td>-0.148424</td>\n",
-       "      <td>-0.728642</td>\n",
-       "      <td>0.157217</td>\n",
-       "      <td>0.892026</td>\n",
-       "      <td>-0.855727</td>\n",
-       "      <td>-0.814275</td>\n",
-       "      <td>-0.678438</td>\n",
-       "      <td>1.141562</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 114 columns</p>\n",
+       "<p>5 rows × 99 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Riki     Razor  Morphling  Brewmaster   Slardar     Wisp  Omniknight  \\\n",
-       "0  5.253443 -0.155243  -0.186940   -0.181034 -0.187513 -0.21094   -0.183669   \n",
-       "1  5.253443 -0.155243  -0.186940   -0.181034 -0.187513 -0.21094   -0.183669   \n",
-       "2 -0.190351  6.441500  -0.186940   -0.181034 -0.187513 -0.21094   -0.183669   \n",
-       "3 -0.190351  6.441500   5.349299   -0.181034 -0.187513 -0.21094    5.444586   \n",
-       "4  5.253443 -0.155243  -0.186940    5.523822 -0.187513 -0.21094   -0.183669   \n",
+       "   Unnamed: 0  Riki  Razor  Morphling  Brewmaster  Slardar  Wisp  Omniknight  \\\n",
+       "0           0   1.0    0.0        0.0         0.0      0.0   0.0         0.0   \n",
+       "1           1   1.0    0.0        0.0         0.0      0.0   0.0         0.0   \n",
+       "2           2   0.0    1.0        0.0         0.0      0.0   0.0         0.0   \n",
+       "3           3   0.0    1.0        1.0         0.0      0.0   0.0         1.0   \n",
+       "4           4   1.0    0.0        0.0         1.0      0.0   0.0         0.0   \n",
        "\n",
-       "      Slark  Ogre Magi  Chaos Knight  ...   Support   Offlane       Mid  \\\n",
-       "0 -0.245093  -0.197112     -0.211026  ... -0.493732  1.007526  1.261730   \n",
-       "1 -0.245093  -0.197112     -0.211026  ... -0.493732  1.007526  0.266544   \n",
-       "2 -0.245093  -0.197112     -0.211026  ... -1.621490 -1.304373  0.266544   \n",
-       "3 -0.245093  -0.197112     -0.211026  ...  0.634025 -1.304373 -0.728642   \n",
-       "4 -0.245093   5.073260     -0.211026  ... -0.493732 -0.148424 -0.728642   \n",
+       "   Slark  Ogre Magi  ...  Naga Siren  Treant Protector  Vengeful Spirit  \\\n",
+       "0    0.0        0.0  ...         0.0               0.0              0.0   \n",
+       "1    0.0        0.0  ...         0.0               1.0              0.0   \n",
+       "2    0.0        0.0  ...         0.0               0.0              0.0   \n",
+       "3    0.0        0.0  ...         0.0               0.0              0.0   \n",
+       "4    0.0        1.0  ...         0.0               0.0              0.0   \n",
        "\n",
-       "     Roamer  Nuke/Disable  High_Win   Low_Win  Most_Picked_719  \\\n",
-       "0  0.157217      3.185349  0.474901 -0.814275        -0.678438   \n",
-       "1  0.157217     -0.254635  0.474901  0.667752        -0.678438   \n",
-       "2 -1.058379      0.892026  1.805530 -0.814275        -0.678438   \n",
-       "3  0.157217      0.892026 -0.855727  0.667752        -0.678438   \n",
-       "4  0.157217      0.892026 -0.855727 -0.814275        -0.678438   \n",
+       "   Night Stalker  Pugna  Leshrac  Dazzle  Spectre  Meepo  Won  \n",
+       "0            0.0    0.0      1.0     0.0      0.0    0.0    1  \n",
+       "1            0.0    0.0      0.0     0.0      0.0    0.0    1  \n",
+       "2            0.0    0.0      1.0     0.0      0.0    0.0    1  \n",
+       "3            0.0    0.0      0.0     0.0      0.0    0.0    1  \n",
+       "4            0.0    0.0      1.0     0.0      0.0    0.0    1  \n",
        "\n",
-       "   Most_Picked_720  Won  \n",
-       "0        -0.650247    1  \n",
-       "1         1.141562    1  \n",
-       "2        -0.650247    1  \n",
-       "3        -0.650247    1  \n",
-       "4         1.141562    1  \n",
-       "\n",
-       "[5 rows x 114 columns]"
+       "[5 rows x 99 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# open the pre-processed csv file and split the target variable from the classifiers\n",
-    "df = pd.read_csv('dota2_scaled.csv')\n",
+    "df = pd.read_csv('dota2_dummies.csv')\n",
     "df.head()"
    ]
   },
@@ -299,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -307,9 +300,7 @@
      "output_type": "stream",
      "text": [
       "D:\\Programs\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:2: UserWarning: This figure includes Axes that are not compatible with tight_layout, so results might be incorrect.\n",
-      "  \n",
-      "D:\\Programs\\Anaconda\\lib\\site-packages\\IPython\\core\\pylabtools.py:128: UserWarning: This figure includes Axes that are not compatible with tight_layout, so results might be incorrect.\n",
-      "  fig.canvas.print_figure(bytes_io, **kw)\n"
+      "  \n"
      ]
     },
     {
