changed feature importances

--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1374,6 +1374,60 @@
     "\n",
     "    \n",
     "hlf.team_composition(winning_lineups, attributes)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['1' '0']\n",
+      " ['one' 'zero']]\n",
+      "[['1' 'one']\n",
+      " ['0' 'zero']]\n",
+      "[['1' 'one']\n",
+      " ['0' 'zero']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "features = [1, 0]\n",
+    "feature_names = ['one', 'zero']\n",
+    "\n",
+    "# combine the features importance and column names into a matrix and sort them\n",
+    "feature_matrix = np.array([features, feature_names])\n",
+    "print(feature_matrix)\n",
+    "feature_matrix = feature_matrix.transpose()\n",
+    "print(feature_matrix)\n",
+    "feature_matrix.sort()\n",
+    "print(feature_matrix)\n",
+    "# divide the column names and feature importance\n",
+    "sorted_feat = feature_matrix[:, 0]\n",
+    "sorted_columns = feature_matrix[:, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['0', '1'], dtype='<U11')"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted_feat"
    ]
   },
   {
