changees to functions

--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1378,32 +1378,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['1' '0']\n",
-      " ['one' 'zero']]\n",
       "[['1' 'one']\n",
-      " ['0' 'zero']]\n",
-      "[['1' 'one']\n",
-      " ['0' 'zero']]\n"
+      " ['0' 'zero']\n",
+      " ['2' 'two']\n",
+      " ['5' 'five']\n",
+      " ['9' 'nine']\n",
+      " ['7' '7']]\n",
+      "[['0' 'zero']\n",
+      " ['1' 'one']\n",
+      " ['2' 'two']\n",
+      " ['5' 'five']\n",
+      " ['7' '7']\n",
+      " ['9' 'nine']]\n"
      ]
     }
    ],
    "source": [
-    "features = [1, 0]\n",
-    "feature_names = ['one', 'zero']\n",
+    "features = [1, 0, 2, 5 ,9 , 7]\n",
+    "feature_names = ['one', 'zero' , 'two', 'five', 'nine', '7']\n",
     "\n",
     "# combine the features importance and column names into a matrix and sort them\n",
     "feature_matrix = np.array([features, feature_names])\n",
-    "print(feature_matrix)\n",
     "feature_matrix = feature_matrix.transpose()\n",
+    "\n",
     "print(feature_matrix)\n",
-    "feature_matrix.sort()\n",
+    "feature_matrix = feature_matrix[feature_matrix[:,0].argsort()]\n",
     "print(feature_matrix)\n",
     "# divide the column names and feature importance\n",
     "sorted_feat = feature_matrix[:, 0]\n",
@@ -1412,22 +1418,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['0', '1'], dtype='<U11')"
+       "array([['1', '0', '2', '5', '9', '7'],\n",
+       "       ['one', 'zero', 'two', 'five', 'nine', '7']], dtype='<U11')"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sorted_feat"
+    "a"
    ]
   },
   {
