--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -990,13 +990,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 307,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "only 2 non-keyword arguments accepted",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-307-35280c97970d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mattributes\u001b[0m \u001b[1;33m=\u001b[0m  \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Ranged_heroes'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Supports'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Carries'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Nukers'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Durable'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mhtml\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'https://dota2.gamepedia.com/Category:Ranged_heroes'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# Pass the page contents to beautiful soup for parsing\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: only 2 non-keyword arguments accepted"
+     ]
+    }
+   ],
    "source": [
-    "attributes =  np.array('Ranged_heroes', 'Supports', 'Carries', 'Nukers', 'Durable')\n",
+    "# roles = 'Ranged_heroes', 'Supports', 'Carries', 'Nukers', 'Durable')\n",
     "\n",
-    "    "
+    "html = requests.get(f'https://dota2.gamepedia.com/Category:Ranged_heroes')\n",
+    "\n",
+    "# Pass the page contents to beautiful soup for parsing\n",
+    "soup = BeautifulSoup(html.content, 'html.parser')\n",
+    "\n",
+    "# search for all the heroes on the list\n",
+    "hero_list = soup.findAll(class_=\"mw-category-group\")\n",
+    "hero_list[0].find('a').get_text()\n",
+    "\n",
+    "# ranged = hlf.heroes_role('Ranged_heroes')   \n",
+    "# ranged"
    ]
   },
   {
