--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,13 +217,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "D:\\Programs\\Anaconda\\lib\\site-packages\\pandas\\core\\frame.py:4223: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  return super().rename(**kwargs)\n",
       "D:\\Programs\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
@@ -337,7 +342,7 @@
        "4          Riki    1  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,16 +402,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-21-09274e7cbb2b>, line 8)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-21-09274e7cbb2b>\"\u001b[1;36m, line \u001b[1;32m8\u001b[0m\n\u001b[1;33m    str_heroes = [x.replace('_', ' ') if x != 'Io' else x = 'Wisp' for x in str_heroes ]\u001b[0m\n\u001b[1;37m                                                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array(['Abaddon', 'Alchemist', 'Axe', 'Beastmaster', 'Brewmaster',\n",
+       "       'Bristleback', 'Centaur Warrunner', 'Chaos Knight', 'Clockwerk',\n",
+       "       'Doom', 'Dragon Knight', 'Earth Spirit', 'Earthshaker',\n",
+       "       'Elder Titan', 'Huskar', 'Wisp', 'Kunkka', 'Legion Commander',\n",
+       "       'Lifestealer', 'Lycan', 'Magnus', 'Mars', 'Night Stalker',\n",
+       "       'Omniknight', 'Phoenix', 'Pudge', 'Sand King', 'Slardar',\n",
+       "       'Spirit Breaker', 'Sven', 'Tidehunter', 'Timbersaw', 'Tiny',\n",
+       "       'Treant Protector', 'Tusk', 'Underlord', 'Undying', 'Wraith King'],\n",
+       "      dtype='<U17')"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -415,17 +430,15 @@
     "agi_heroes = hlf.main_attributes('Agility')\n",
     "int_heroes = hlf.main_attributes('Intelligence')\n",
     "\n",
-    "# removing some extra special characters\n",
-    "agi_heroes = [x.replace('_', ' ') for x in agi_heroes]\n",
-    "str_heroes = [x.replace('_', ' ') if x != 'Io' else x = 'Wisp' for x in str_heroes ]\n",
-    "int_heroes = [x.replace('_', ' ') for x in int_heroes]\n",
-    "int_heroes = [x.replace('%27', \"'\") for x in int_heroes]\n",
-    "str_heroes"
+    "# changing IO to WISP\n",
+    "for ind, hero in enumerate(str_heroes):\n",
+    "    if hero == 'Io':\n",
+    "        str_heroes[ind] = 'Wisp'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +472,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
@@ -480,13 +493,13 @@
       "text/plain": [
        "   Strength\n",
        "0         0\n",
-       "1         0\n",
+       "1         2\n",
        "2         1\n",
        "3         2\n",
        "4         2"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +574,7 @@
        "4        1"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +649,7 @@
        "4             2"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,13 +663,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Ancient Apparition', 'Bane', 'Chen', 'Dark Willow', 'Enchantress',\n",
+       "       'Grimstroke', 'Huskar', 'Invoker', 'Jakiro', 'Keeper of the Light',\n",
+       "       'Leshrac', 'Medusa', \"Nature's Prophet\", 'Oracle', 'Phoenix',\n",
+       "       'Queen of Pain', 'Razor', 'Shadow Demon', 'Techies',\n",
+       "       'Vengeful Spirit', 'Warlock', 'Zeus'], dtype='<U19')"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# roles = 'Ranged_heroes', 'Supports', 'Carries', 'Nukers', 'Durable'\n",
     "\n",
-    "ranged = hlf.heroes_roles('Ranged_heroes')   \n",
+    "ranged = hlf.hero_roles('Ranged_heroes')   \n",
     "ranged"
    ]
   },
@@ -1111,9 +1139,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<a href=\"/Dark_Willow\" title=\"Dark Willow\">Dark Willow</a>,\n",
+       " <a href=\"/Dazzle\" title=\"Dazzle\">Dazzle</a>,\n",
+       " <a href=\"/Disruptor\" title=\"Disruptor\">Disruptor</a>]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "category = 'Supports'\n",
     "# Make a get request to retrieve the page\n",
@@ -1124,15 +1165,80 @@
     "\n",
     "# search for all the heroes on the list\n",
     "hero_list = soup.findAll(class_=\"mw-category-group\")\n",
-    "hero_list[0].find('a').get_text()"
+    "hero_list[3].findAll('a')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Zeus'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "# Make a get request to retrieve the page\n",
+    "html = requests.get(f'https://dota2.gamepedia.com/Category:Ranged_heroes')\n",
+    "\n",
+    "# Pass the page contents to beautiful soup for parsing\n",
+    "soup = BeautifulSoup(html.content, 'html.parser')\n",
+    "\n",
+    "# search for all the heroes on the list\n",
+    "for item in page:\n",
+    "    try:\n",
+    "        items.findAll('a')\n",
+    "        heroes = np.array([hero.find('a').get_text() for hero in item])\n",
+    "    except:\n",
+    "        heroes = item.find('a').get_text()\n",
+    "    \n",
+    "heroes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "html = requests.get(f'https://dota2.gamepedia.com/Category:Ranged_heroes')\n",
+    "\n",
+    "# Pass the page contents to beautiful soup for parsing\n",
+    "soup = BeautifulSoup(html.content, 'html.parser')\n",
+    "\n",
+    "# search for all the heroes on the list\n",
+    "page = soup.findAll(class_=\"mw-category-group\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "ResultSet object has no attribute 'findAll'. You're probably treating a list of items like a single item. Did you call find_all() when you meant to call find()?",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-42-98e7726add74>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpage\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfindAll\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'a'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mD:\\Programs\\Anaconda\\lib\\site-packages\\bs4\\element.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   1576\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__getattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1577\u001b[0m         raise AttributeError(\n\u001b[1;32m-> 1578\u001b[1;33m             \u001b[1;34m\"ResultSet object has no attribute '%s'. You're probably treating a list of items like a single item. Did you call find_all() when you meant to call find()?\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1579\u001b[0m         )\n",
+      "\u001b[1;31mAttributeError\u001b[0m: ResultSet object has no attribute 'findAll'. You're probably treating a list of items like a single item. Did you call find_all() when you meant to call find()?"
+     ]
+    }
+   ],
+   "source": [
+    "page.findAll('a')"
+   ]
   },
   {
    "cell_type": "code",
